Hide scrollbars for correct masonry view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,14 @@ body {
 
 #app {
   height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+#app::-webkit-scrollbar {
+  display: none;
 }
 
 .colorPrimary {
